--- a/backend/package.json
+++ b/backend/package.json
@@ -15,19 +15,32 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "escpos": "^3.0.0-alpha.6",
     "escpos-network": "^3.0.0-alpha.5",
+    "escpos-serialport": "^3.0.0-alpha.4",
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.47",
+    "net": "^1.0.2",
     "node-fetch": "^3.3.2",
+    "node-schedule": "^2.1.1",
+    "node-thermal-printer": "^4.4.5",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^24.7.1",
     "react-modal": "^3.16.3",
     "sequelize": "^6.37.5",
+    "sharp": "^0.34.1",
+    "url": "^0.11.4",
+    "usb": "^2.15.0",
+    "util": "^0.12.5",
     "zpl": "^1.0.0"
   },
   "devDependencies": {
