--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
+    "@chakra-ui/react": "^3.19.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "child_process": "^1.0.2",
@@ -23,6 +26,7 @@
     "escpos-serialport": "^3.0.0-alpha.4",
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.21.2",
+    "framer-motion": "^12.16.0",
     "fs": "^0.0.1-security",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
@@ -36,6 +40,7 @@
     "pg-hstore": "^2.3.4",
     "puppeteer": "^24.7.1",
     "react-modal": "^3.16.3",
+    "react-router-dom": "^7.6.2",
     "sequelize": "^6.37.5",
     "sharp": "^0.34.1",
     "url": "^0.11.4",
